fixed up some styling issues for contact section on mobile and added target blanks to links

--- a/dev/styles/partials/_contact.scss
+++ b/dev/styles/partials/_contact.scss
@@ -61,7 +61,7 @@ form {
         display: flex;
         flex-direction: column;
         width: calc(50% - 40px);
-        margin: 80px 20px;
+        margin: 80px auto;
         @include respond-to('medium') {
             width: 100%;
             align-items: center;
@@ -74,6 +74,8 @@ form {
             padding: 21px 0;
             width: 800px;
             color: $mediumgrey;
+            -webkit-appearance: none;
+            -webkit-border-radius: 0;
             @include respond-to('large') {
                 width: 350px;
             }
@@ -81,7 +83,7 @@ form {
                 width: 500px;
             }
             @include respond-to('small') {
-                width: 350px;
+                width: 300px;
             }
             &:focus {
                 border-bottom: 2px solid $darkgrey;
@@ -97,11 +99,10 @@ form {
         font-family: $bodyFont;
         outline: none;
         color: $mediumgrey;
+        -webkit-appearance: none;
+        -webkit-border-radius: 0;
         @include respond-to('medium') {
             width: 70%;
-        }
-        @include respond-to('small') {
-            width: 100%;
         }
 
         &:focus {
